--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ h2.section-title {
 	margin-top:2.5em;
 }
 
+.avatar:hover {
+	content: url('https://avatars3.githubusercontent.com/u/572096?v=3&s=460');
+}
 .avatar {
 	border-radius: 50%;
 	max-width:260px;
@@ -492,7 +495,7 @@ icon.large {
 	<div class="container" id="resume">
 			<div id="card" class="row">
 				<div class="col-xs-3 col-sm-4">
-					<img class="avatar" src="https://avatars3.githubusercontent.com/u/572096?v=3&amp;s=460"/>
+					<img class="avatar" src="http://cs417629.vk.me/v417629163/dfb2/zlCdi34xpg0.jpg"/>
 				</div>
 				<div class="col-xs-9 col-sm-8">
 					<h1>Dmitry Patsura</h1>
