--- a/index.html
+++ b/index.html
@@ -67,8 +67,65 @@ h2.section-title {
 	margin-top:2.5em;
 }
 
+@-webkit-keyframes rotation {
+	0% {-webkit-transform:rotate(0deg);
+		-moz-transform:rotate(0deg);
+		-o-transform:rotate(0deg);
+		transform:rotate(0deg);}
+	100% {-webkit-transform:rotate(360deg);
+		-moz-transform:rotate(360deg);
+		-o-transform:rotate(360deg);
+		transform:rotate(360deg);}
+}
+@-moz-keyframes rotation {
+	0% {-webkit-transform:rotate(0deg);
+		-moz-transform:rotate(0deg);
+		-o-transform:rotate(0deg);
+		transform:rotate(0deg);}
+	100% {-webkit-transform:rotate(360deg);
+		-moz-transform:rotate(360deg);
+		-o-transform:rotate(360deg);
+		transform:rotate(360deg);}
+}
+@-o-keyframes rotation {
+	0% {-webkit-transform:rotate(0deg);
+		-moz-transform:rotate(0deg);
+		-o-transform:rotate(0deg);
+		transform:rotate(0deg);}
+	100% {-webkit-transform:rotate(360deg);
+		-moz-transform:rotate(360deg);
+		-o-transform:rotate(360deg);
+		transform:rotate(360deg);}
+}
+@keyframes rotation {
+	0% {-webkit-transform:rotate(0deg);
+		-moz-transform:rotate(0deg);
+		-o-transform:rotate(0deg);
+		transform:rotate(0deg);}
+	100% {-webkit-transform:rotate(360deg);
+		-moz-transform:rotate(720deg);
+		-o-transform:rotate(360deg);
+		transform:rotate(360deg);}
+}
+
 .avatar:hover {
 	content: url('https://avatars3.githubusercontent.com/u/572096?v=3&s=460');
+	-webkit-animation-name: rotation;
+	-webkit-animation-duration: 10s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+	-moz-animation-name: rotation;
+	-moz-animation-duration: 10s;
+	-moz-animation-iteration-count: infinite;
+	-moz-animation-timing-function: linear;
+	-o-animation-name: rotation;
+	-o-animation-duration: 10s;
+	-o-animation-iteration-count: infinite;
+	-o-animation-timing-function: linear;
+	animation-name: rotation;
+	animation-duration: 10s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
 }
 .avatar {
 	border-radius: 50%;
