Fix bugs with avatar reloading without cache

--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@ h2.section-title {
 }
 .avatar {
 	border-radius: 50%;
-	max-width:260px;
-	margin-top:0em;
+	width:260px;
+	height: 260px;
+	margin-top:0;
+	display: block;
 }
 
 .item {
