Rewrite photo grid

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ icon.large {
 	</script>
 	<div class="container" id="resume">
 			<div id="card" class="row">
-				<div class="col-xs-3 col-sm-4">
+				<div class="col-sm-4">
 					<img class="avatar" src="http://cs417629.vk.me/v417629163/dfb2/zlCdi34xpg0.jpg"/>
 					<img src="train.gif" id="train" style="visibility: hidden; left: -500px; position: absolute; top: 50px;">
 				</div>
