--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ h2.section-title {
 	animation-timing-function: linear;
 }
 .avatar {
+	margin: 0 auto;
 	border-radius: 50%;
 	width:260px;
 	height: 260px;
