--- a/index.html
+++ b/index.html
@@ -1098,14 +1098,20 @@ icon.large {
 			</div>
 		</div>
 		<div class="col-sm-8">
-			<div class="item">
-				<h3><span class="label label-default label-lg">Bodybuilding</span></h3>
-			</div>
+			<!--<div class="item">-->
+				<!--<h3><span class="label label-default label-lg">Bodybuilding</span></h3>-->
+			<!--</div>-->
 			<div class="item">
 				<h3><span class="label label-default label-lg">Frontend</span></h3>
 			</div>
 			<div class="item">
-				<h3><span class="label label-default label-lg">Hight-load</span></h3>
+				<h3><span class="label label-default label-lg">New backend technologies</span></h3>
+			</div>
+			<div class="item">
+				<h3><span class="label label-default label-lg">Highload</span></h3>
+			</div>
+			<div class="item">
+				<h3><span class="label label-default label-lg">Mathematica</span></h3>
 			</div>
 		</div>
 	</section>
