Preload funny cat

--- a/index.html
+++ b/index.html
@@ -132,8 +132,12 @@ h2.section-title {
 	border-radius: 50%;
 	width:260px;
 	height: 260px;
-	margin-top:0;
 	display: block;
+}
+
+body:after {
+	content: url('https://avatars3.githubusercontent.com/u/572096?v=3&s=460');
+	display: none;
 }
 
 .item {
