--- a/index.html
+++ b/index.html
@@ -560,6 +560,9 @@ icon.large {
 	height: 40px;
 	width: 106px;
 }
+.upwork:hover {
+	background-color: lightgrey;
+}
 
 		.google-hover:hover .g {
 			color: blue;
