Added Symfony 2/CakePHP to used frameworks

--- a/index.html
+++ b/index.html
@@ -1055,6 +1055,8 @@ icon.large {
 					<li>Zend framework 1</li>
 					<li>Phalcon 1/2</li>
 					<li>Docrtine 1/2 ORM/DBAL</li>
+					<li>CakePHP</li>
+					<li>Symfony 2</li>
 				</ul>
 			</div>
 			<div class="item">
