--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@ icon.large {
 					<li>Composer</li>
 					<li>Zend framework 1</li>
 					<li>Phalcon 1/2</li>
-					<li>Docrtine 1/2 ORM/DBAL</li>
+					<li>Doctrine 1/2 ORM/DBAL</li>
 					<li>CakePHP</li>
 					<li>Symfony 2</li>
 				</ul>
