Added socialconnect project

--- a/index.html
+++ b/index.html
@@ -907,6 +907,32 @@ icon.large {
 			</div>
 			<div class="item">
 				<h3 class="company">
+					SocialConnect
+				</h3>
+				<div class="date">
+					<span class="startDate">
+						2015-02-15
+					</span>
+					<span class="endDate">
+						- Present
+					</span>
+				</div>
+				<div class="website">
+					<a href="https://github.com/socialconnect">https://github.com/socialconnect</a>
+				</div>
+				<div class="summary">
+					<p>OAuth1/OAuth2 component + common component + SDK(s).</p>
+				</div>
+				<ul class="highlights">
+					<li>socialconnect/auth</li>
+					<li>socialconnect/common</li>
+					<li>socialconnect/instagram</li>
+					<li>socialconnect/vk</li>
+					<li>socialconnect/github</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="company">
 					Phalcon Module Skeleton
 				</h3>
 				<div class="date">
