--- a/index.html
+++ b/index.html
@@ -733,7 +733,11 @@ icon.large {
 				<ul class="highlights">
 					<li>ElasticSearch</li>
 					<li>Redis for 4k sorted-collections</li>
-					<li>Phalcon 2/Zephir</li>
+					<li>Phalcon 2/Symfony 2/Doctrine 2/CakePHP</li>
+					<li>Zephir</li>
+					<li>Bower/NPM</li>
+					<li>Gulp + Webpack</li>
+					<li>Backbone/AngularJS</li>
 				</ul>
 			</div>
 			<div class="item">
@@ -1053,9 +1057,10 @@ icon.large {
 					<li>HTML</li>
 					<li>CSS</li>
 					<li>Javascript</li>
+					<li>NPM/Bower</li>
+					<li>Gulp/Webpack</li>
 					<li>AngularJS 1.3.x</li>
-					<li>Gulp</li>
-					<li>Babel</li>
+					<li>Underscore</li>
 				</ul>
 			</div>
 			<div class="item">
