--- a/index.html
+++ b/index.html
@@ -788,10 +788,12 @@ icon.large {
 					<a href="http://artlime.ru/">http://artlime.ru/</a>
 				</div>
 				<div class="summary">
-					<p>@todo.</p>
+					<p>Working on Uniqhand.ru.</p>
 				</div>
 				<ul class="highlights">
 					<li>Start working on Uniqhand.ru</li>
+					<li>Zend framework 1/Doctrine 1</li>
+					<li>Mysql/Memcached</li>
 				</ul>
 			</div>
 			<div class="item">
