--- a/index.html
+++ b/index.html
@@ -697,10 +697,14 @@ icon.large {
 				<div class="col-sm-8 col-sm-offset-4 col-xs-12">
 					<div class="summary">
 						<p class="lead">
-							Hey! I am full stack web developer Who loves computer science and hipster technologies.
+							Hey! I am full stack web developer Who loves computer science and hipster technologies. The best way to known me will be researching on Github's profile.
+						</p>
+						<p>
 							Over the last 5 years I have developed different information systems including Web sites using many technologies such as: PHP, HTML/CSS, Javascript (Backbone/AngularJS/jQuery), MySQL/Mongo, SphinxSearch/ElasticSearch, Memcached and many others.
-							The best way to known me will be researching on Github's profile.
-							Vagrant/Docker I could tell you about it, but THAT would NOT be a “length-limited” conversation!</p>
+						</p>
+						<p>
+							Vagrant/Docker I could tell you about it, but THAT would NOT be a “length-limited” conversation!
+						</p>
 					</div>
 				</div>
 			</div>
