--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ icon.large {
 	<div class="container" id="resume">
 			<div id="card" class="row">
 				<div class="col-sm-4">
-					<img class="avatar" src="http://cs417629.vk.me/v417629163/dfb2/zlCdi34xpg0.jpg"/>
+					<img class="avatar" src="//cs417629.vk.me/v417629163/dfb2/zlCdi34xpg0.jpg"/>
 					<img src="train.gif" id="train" style="visibility: hidden; left: -500px; position: absolute; top: 50px;">
 				</div>
 				<div class="col-xs-9 col-sm-8">
@@ -644,7 +644,7 @@ icon.large {
 						<div class="contact">
 							<div class="website">
 								<icon class="entypo-compass"></icon>
-								<a href="http://dmtry.me/">http://dmtry.me/</a>
+								<a href="https://dmtry.me/">http://dmtry.me/</a>
 							</div>
 							<div class="email">
 								<icon class="entypo-mail"></icon>
@@ -660,7 +660,7 @@ icon.large {
 						</section>
 						<section id="profiles">
 							<div class="item">
-								<a href="http://github.com/ovr" target="_blank">
+								<a href="https://github.com/ovr" target="_blank">
 								<icon class="entypo-github"></icon>
 								</a>
 							</div>
