--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@ icon.large {
 					</span>
 				</div>
 				<div class="website">
-					<a href="http://piedpiper.com">http://piedpiper.com</a>
+					<a href="http://uniqhand.ru/">http://uniqhand.ru/</a>
 				</div>
 				<div class="summary">
 					<p>Uniqhand is a market/self-hosted platform builded for lovers of unusual things and their works.</p>
