--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@ icon.large {
 	<div class="container" id="resume">
 			<div id="card" class="row">
 				<div class="col-sm-4">
-					<img class="avatar" src="//cs417629.vk.me/v417629163/dfb2/zlCdi34xpg0.jpg"/>
+					<img class="avatar" src="https://dmtry.me/img/avatar.jpg"/>
 					<img src="train.gif" id="train" style="visibility: hidden; left: -500px; position: absolute; top: 50px;">
 				</div>
 				<div class="col-xs-9 col-sm-8">
