--- a/index.html
+++ b/index.html
@@ -140,6 +140,33 @@
 		<div class="col-sm-8">
 			<div class="item">
 				<h3 class="name">
+					BlaBla.eu Corp.
+				</h3>
+				<div class="position">
+					<p class="lead">Backend developer</p>
+				</div>
+				<div class="date">
+					<span class="startDate">
+						2015 (September)
+					</span>
+					<span class="endDate">
+						- Present
+					</span>
+				</div>
+				<div class="summary">
+					<p>Difference project &amp; skills.</p>
+				</div>
+				<ul class="highlights">
+					<li>RabittMQ</li>
+					<li>Redis</li>
+					<li>PostgreSQL (json/hstore/composite types/postgis)</li>
+					<li>Docker</li>
+					<li>Go & PHP 5.6/7</li>
+					<li>GitLab/GitLabCI/JIRA/BitBucket</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">
 					Freelance Jobs NDA/Upwork
 				</h3>
 				<div class="position">
@@ -147,7 +174,7 @@
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2014
+						2014 - 2015 (September)
 					</span>
 					<span class="endDate">
 						- Present
