--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 					<a href="https://blabla.eu/">https://blabla.eu/</a>
 				</div>
 				<div class="summary">
-					<p>Difference project &amp; skills.</p>
+					<p>My project technology stack.</p>
 				</div>
 				<ul class="highlights">
 					<li>RabittMQ</li>
