--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							Hey! I am full stack web developer Who loves computer science and hipster technologies. The best way to known me will be researching on Github's profile.
 						</p>
 						<p>
-							Over the last 5 years I have developed different information systems including Web sites using many technologies such as: PHP, HTML/CSS, Javascript (Backbone/AngularJS/jQuery), MySQL/Mongo, SphinxSearch/ElasticSearch, Memcached and many others.
+							Over the last 5 years I have developed different information systems including Web sites using many technologies such as: PHP/Go/C++/C, HTML/CSS, Javascript (Backbone/AngularJS/jQuery), MySQL/PostgreSQL/Mongo, SphinxSearch/ElasticSearch, Redis/Memcached and many others.
 						</p>
 						<p>
 							Vagrant/Docker I could tell you about it, but THAT would NOT be a “length-limited” conversation!
@@ -157,7 +157,7 @@
 					<a href="https://blabla.eu/">https://blabla.eu/</a>
 				</div>
 				<div class="summary">
-					<p>My project technology stack.</p>
+					<p>Project technology stack.</p>
 				</div>
 				<ul class="highlights">
 					<li>RabittMQ</li>
