--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<div class="col-sm-8 col-sm-offset-4 col-xs-12">
 					<div class="summary">
 						<p class="lead">
-							Hey! I am full stack web developer Who loves computer science and hipster technologies. The best way to known me will be researching on Github's profile.
+							Hey! I am full stack web developer Who loves computer science and hipster technologies. The best way to known me will be researching on <a href="https://github.com/ovr">Github's profile</a>.
 						</p>
 						<p>
 							Over the last 5 years I have developed different information systems including Web sites using many technologies such as: PHP/Go/C++/C, HTML/CSS, Javascript (Backbone/AngularJS/jQuery), MySQL/PostgreSQL/Mongo, SphinxSearch/ElasticSearch, Redis/Memcached and many others.
