--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								</a>
 							</div>
 							<div class="item">
-								<a href="https://www.linkedin.com/profile/view?id=218499909&amp;trk=hp-identity-photo" target="_blank">
+								<a href="https://ru.linkedin.com/in/dmitry-patsura-85921261" target="_blank">
 								<icon class="entypo-linkedin"></icon>
 								</a>
 							</div>
