--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
 					<a href="https://blabla.eu/">https://blabla.eu/</a>
 				</div>
 				<div class="summary">
+					<p>BlaBla is a yet another social network with many micro services (smart feeds/dating/messager).</p>
 					<p>Project technology stack.</p>
 				</div>
 				<ul class="highlights">
