--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div id="card" class="row">
 				<div class="col-sm-4">
 					<img class="avatar" src="https://dmtry.me/img/avatar.jpg"/>
-					<img src="train.gif" id="train" style="visibility: hidden; left: -500px; position: absolute; top: 50px;">
+					<img src="train.gif" id="train" style="visibility: hidden; left: -500px; position: absolute; top: 50px; z-index: 1111;">
 				</div>
 				<div class="col-xs-9 col-sm-8">
 					<h1 class="google-hover">
