--- a/index.html
+++ b/index.html
@@ -610,13 +610,16 @@
 				<h3><span class="label label-default label-lg">Frontend</span></h3>
 			</div>
 			<div class="item">
-				<h3><span class="label label-default label-lg">New backend technologies</span></h3>
+				<h3><span class="label label-default label-lg">Backend</span></h3>
 			</div>
 			<div class="item">
 				<h3><span class="label label-default label-lg">Highload</span></h3>
 			</div>
 			<div class="item">
 				<h3><span class="label label-default label-lg">Mathematica</span></h3>
+			</div>
+			<div class="item">
+				<h3><span class="label label-default label-lg">High Performance Computing</span></h3>
 			</div>
 		</div>
 	</section>
