--- a/index.html
+++ b/index.html
@@ -530,9 +530,14 @@
 				<ul class="keywords">
 					<li>MySQL</li>
 					<li>PgSQL</li>
-					<li>MongoDB</li>
 					<li>Redis</li>
 					<li>Memcached</li>
+				</ul>
+				<div class="level">
+					<p><em>Low</em></p>
+				</div>
+				<ul class="keywords">
+					<li>MongoDB</li>
 				</ul>
 			</div>
 			<div class="item">
