--- a/index.html
+++ b/index.html
@@ -552,18 +552,18 @@
 					<li>Doctrine 1/2 ORM/DBAL</li>
 					<li>CakePHP</li>
 					<li>Symfony 2</li>
+					<li>PHPUnit</li>
+					<li>CodeCeption</li>
 				</ul>
 			</div>
 			<div class="item">
 				<h3 class="name">Languages</h3>
-				<div class="level">
-					<p><em>Master</em></p>
-				</div>
 				<ul class="keywords">
-					<li>PHP</li>
-					<li>Zephir</li>
-					<li>C/C++</li>
-					<li>JS</li>
+					<li>PHP (Master)</li>
+					<li>Zephir  (Master)</li>
+					<li>Go (Mid)</li>
+					<li>C/C++ (Mid)</li>
+					<li>JS (~Mid)</li>
 				</ul>
 			</div>
 		</div>
