--- a/index.html
+++ b/index.html
@@ -558,12 +558,27 @@
 			</div>
 			<div class="item">
 				<h3 class="name">Languages</h3>
+				<div class="level">
+					<p><em>Master</em></p>
+				</div>
 				<ul class="keywords">
-					<li>PHP (Master)</li>
-					<li>Zephir  (Master)</li>
-					<li>Go (Mid)</li>
-					<li>C/C++ (Mid)</li>
-					<li>JS (~Mid)</li>
+					<li>PHP</li>
+					<li>Zephir</li>
+				</ul>
+				<div class="level">
+					<p><em>Medium</em></p>
+				</div>
+				<ul class="keywords">
+					<li>Go</li>
+					<li>C/C++</li>
+					<li>JS</li>
+				</ul>
+				<div class="level">
+					<p><em>Low</em></p>
+				</div>
+				<ul class="keywords">
+					<li>Java</li>
+					<li>Scala</li>
 				</ul>
 			</div>
 		</div>
