--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 		<div class="col-sm-8">
 			<div class="item">
 				<h3 class="company">
-					PHPSA - Static Analysis for PHP
+					PHPSA - Smart Analysis for PHP
 				</h3>
 				<div class="date">
 					<span class="startDate">
@@ -337,12 +337,13 @@
 					<a href="https://github.com/ovr/phpsa">https://github.com/ovr/phpsa</a>
 				</div>
 				<div class="summary">
-					<p>Global movement of free coding clubs for young people.</p>
+					<p>PHPSA is a development tool aimed at bringing complex analysis for PHP applications and libraries.</p>
 				</div>
 				<ul class="highlights">
 					<li>Static analysis</li>
 					<li>Code metrics</li>
 					<li>Branch prediction</li>
+					<li>Sandbox (AST) Compiler</li>
 				</ul>
 			</div>
 			<div class="item">
