--- a/index.html
+++ b/index.html
@@ -348,6 +348,62 @@
 			</div>
 			<div class="item">
 				<h3 class="company">
+					SocialConnect
+				</h3>
+				<div class="date">
+					<span class="startDate">
+						2015-02-15
+					</span>
+					<span class="endDate">
+						- Present
+					</span>
+				</div>
+				<div class="website">
+					<a href="https://github.com/socialconnect">https://github.com/socialconnect</a>
+				</div>
+				<div class="summary">
+					<p>Lets connect your backend with other services.</p>
+				</div>
+				<ul class="highlights">
+					<li>
+						<a href="https://github.com/socialconnect/auth">
+							socialconnect/auth
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/socialconnect/common">
+							socialconnect/common
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/socialconnect/instagram">
+							socialconnect/instagram
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/socialconnect/vk">
+							socialconnect/vk
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/socialconnect/github">
+							socialconnect/github
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/socialConnect/sms">
+							socialconnect/sms
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/socialconnect/push">
+							socialconnect/push
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="company">
 					Owl Framework
 				</h3>
 				<div class="date">
@@ -367,32 +423,6 @@
 				<ul class="highlights">
 					<li>Framework ;)</li>
 					<li>Performance boost</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="company">
-					SocialConnect
-				</h3>
-				<div class="date">
-					<span class="startDate">
-						2015-02-15
-					</span>
-					<span class="endDate">
-						- Present
-					</span>
-				</div>
-				<div class="website">
-					<a href="https://github.com/socialconnect">https://github.com/socialconnect</a>
-				</div>
-				<div class="summary">
-					<p>OAuth1/OAuth2 component + common component + SDK(s).</p>
-				</div>
-				<ul class="highlights">
-					<li>socialconnect/auth</li>
-					<li>socialconnect/common</li>
-					<li>socialconnect/instagram</li>
-					<li>socialconnect/vk</li>
-					<li>socialconnect/github</li>
 				</ul>
 			</div>
 			<div class="item">
