--- a/index.html
+++ b/index.html
@@ -549,8 +549,16 @@
 					<li>Javascript</li>
 					<li>NPM/Bower</li>
 					<li>Gulp/Webpack</li>
-					<li>AngularJS 1.3.x</li>
 					<li>Underscore</li>
+					<li>AngularJS 1.3.x</li>
+				</ul>
+				<div class="level">
+					<p><em>Low+</em></p>
+				</div>
+				<ul class="keywords">
+					<li>AngularJS 1.3.x</li>
+					<li>ReactJS</li>
+					<li>React Native</li>
 				</ul>
 			</div>
 			<div class="item">
