Upd - Finish work in BlaBla

--- a/index.html
+++ b/index.html
@@ -140,6 +140,22 @@
 		<div class="col-sm-8">
 			<div class="item">
 				<h3 class="name">
+					Unknown Company
+				</h3>
+				<div class="position">
+					<p class="lead">Backend developer</p>
+				</div>
+				<div class="date">
+					<span class="startDate">
+						2016 (May)
+					</span>
+					<span class="endDate">
+						---
+					</span>
+				</div>
+			</div>
+			<div class="item">
+				<h3 class="name">
 					BlaBla.eu Corp.
 				</h3>
 				<div class="position">
@@ -150,7 +166,7 @@
 						2015 (September)
 					</span>
 					<span class="endDate">
-						- Present
+						2016 (May)
 					</span>
 				</div>
 				<div class="website">
