Remove telephone, blocked :(

--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
 								<a href="/cdn-cgi/l/email-protection#7e0a1f12153e1a130a0c0750131b"><span class="__cf_email__" data-cfemail="84f0e5e8efc4e0e9f0f6fdaae9e1">[email&#160;protected]</span><script cf-hash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("cf-hash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}}}catch(u){}}();/* ]]> */</script></a>
 							</div>
-							<div class="phone">
-								<icon class="entypo-phone"></icon>
-								+7 (967) 212-6753
-							</div>
+							<!--<div class="phone">-->
+							<!--	<icon class="entypo-phone"></icon>-->
+							<!--</div>-->
 						</div>
 						<section id="location">
 						</section>
