Fix typo! Thanks @dedpikhto

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<div class="col-sm-8 col-sm-offset-4 col-xs-12">
 					<div class="summary">
 						<p class="lead">
-							Hey! I am full stack web developer Who loves computer science and hipster technologies. The best way to known me will be researching on <a href="https://github.com/ovr">Github's profile</a>.
+							Hey! I am full stack web developer Who loves computer science and hipster technologies. The best way to know me will be researching on <a href="https://github.com/ovr">Github's profile</a>.
 						</p>
 						<p>
 							Over the last 6+ years I have developed different information systems including Web sites using many technologies such as: PHP/Go/C++/C, HTML/CSS, Javascript (Backbone/AngularJS/jQuery), PostgreSQL/MySQL/Mongo, Redis/Memcached, Docker/Vagrant, SphinxSearch/ElasticSearch and many others.
