Fix typo! Thank @dedpikhto

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<p>Project technology stack.</p>
 				</div>
 				<ul class="highlights">
-					<li>RabittMQ</li>
+					<li>RabbitMQ</li>
 					<li>Redis</li>
 					<li>PostgreSQL (json/hstore/composite types/postgis)</li>
 					<li>Docker</li>
