--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 					<icon class="large entypo-globe"></icon>
 				</div>
 				<div class="col-xs-10">
-					<h2 class="section-title">Volunteer</h2>
+					<h2 class="section-title">Open source</h2>
 				</div>
 			</div>
 		</div>
