--- a/index.html
+++ b/index.html
@@ -338,6 +338,30 @@
 		<div class="col-sm-8">
 			<div class="item">
 				<h3 class="company">
+					GHubber - mobile client for GitHub
+				</h3>
+				<div class="date">
+					<span class="startDate">
+						2017-05-00
+					</span>
+					<span class="endDate">
+						- Present
+					</span>
+				</div>
+				<div class="website">
+					<a href="https://github.com/ovr/ghubber">https://github.com/ovr/ghubber</a>
+				</div>
+				<div class="summary">
+					<p>Mobile client for GitHub build on React Native.</p>
+				</div>
+				<ul class="highlights">
+					<li>React-Native</li>
+					<li>Redux/Redux-thunk</li>
+					<li>RealmJS</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="company">
 					PHPSA - Smart Analysis for PHP
 				</h3>
 				<div class="date">
