--- a/index.html
+++ b/index.html
@@ -583,20 +583,20 @@
 					<p><em>Master</em></p>
 				</div>
 				<ul class="keywords">
-					<li>HTML</li>
-					<li>CSS</li>
-					<li>Javascript</li>
+					<li>ReactJS</li>
+					<li>React Native</li>
+					<li>Redux/Thunk/Saga</li>
+					<li>Babel/Flow</li>
+					<li>HTML/CSS/Javascript</li>
 					<li>NPM/Bower</li>
-					<li>Gulp/Webpack</li>
-					<li>Underscore</li>
+					<li>Webpack/Gulp</li>
+					<li>Lodash/Underscore</li>
 				</ul>
 				<div class="level">
 					<p><em>Low+</em></p>
 				</div>
 				<ul class="keywords">
 					<li>AngularJS 1.3.x</li>
-					<li>ReactJS</li>
-					<li>React Native</li>
 				</ul>
 			</div>
 			<div class="item">
