--- a/index.html
+++ b/index.html
@@ -539,6 +539,33 @@
 		<div class="col-sm-8">
 			<div class="item">
 				<div class="name">
+					<h3>React Native - Learn once, write anywhere</h3>
+				</div>
+				<div class="publisher">
+					<p class="lead">DevConf 2017</p>
+				</div>
+				<div class="date">
+					2017-06-17
+				</div>
+				<div class="summary">
+					<p>
+						От обзора архитектуры react-native, до построения приложения на нем. В процессе доклада мы разберем разработку приложения на нем и решении трудностей, а также сделаем выводы о плюсах и минусах данной технологии.
+					</p>
+					<p>
+						В этом докладе расскажу про:
+					</p>
+					<ul>
+						<li>Архитектуру React Native</li>
+						<li>Разберем реализацию приложения для социальной сети</li>
+						<li>Решение проблем с ListView, Shared Component, JS thread block</li>
+						<li>Flow/Redux/Thunk/Saga/RealmJS</li>
+						<li>Deploy приложения</li>
+						<li>Разберем плюсы и минусы этой технологии</li>
+					</ul>
+				</div>
+			</div>
+			<div class="item">
+				<div class="name">
 					<h3>Сладкое будущее: Phalcon и Zephir</h3>
 				</div>
 				<div class="publisher">
