--- a/index.html
+++ b/index.html
@@ -566,6 +566,28 @@
 			</div>
 			<div class="item">
 				<div class="name">
+					<h3>[Go] История двух микросервисов</h3>
+				</div>
+				<div class="publisher">
+					<p class="lead">DevConf 2017</p>
+				</div>
+				<div class="date">
+					2017-06-17
+				</div>
+				<div class="summary">
+					<p>
+						Речь пойдет о написании двух микросервисов:
+					</p>
+					<p>
+						WebSocketerD - (WS server <-> Hub ( Redis/AMQP), который позволяет backend (REST API на PHP) слать сообщения клиентам
+					</p>
+					<p>
+						Uploaderd - загрузка пользовательского контента (видео/аудио/фото) с использованием ffmpeg / imagemagick
+					</p>
+				</div>
+			</div>
+			<div class="item">
+				<div class="name">
 					<h3>Сладкое будущее: Phalcon и Zephir</h3>
 				</div>
 				<div class="publisher">
