--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 							Hey! I am full stack web developer Who loves computer science and hipster technologies. The best way to know me will be researching on <a href="https://github.com/ovr">Github's profile</a>.
 						</p>
 						<p>
-							Over the last 6+ years I have developed different information systems including Web sites using many technologies such as: PHP/Go/C++/C, HTML/CSS, Javascript (Backbone/AngularJS/jQuery), PostgreSQL/MySQL/Mongo, Redis/Memcached, Docker/Vagrant, SphinxSearch/ElasticSearch and many others.
+							Over the last 8+ years I have developed different information systems including Web sites using many technologies such as: PHP/GO/C++/C, JS (React/Redux/Webpack/Flow/Babel) & React-Native, PostgreSQL/MySQL/Mongo, Redis/Memcached, Docker/Vagrant, SphinxSearch/ElasticSearch and many others.
 						</p>
 						<p>
 							Vagrant/Docker I could tell you about it, but THAT would NOT be a “length-limited” conversation!
