--- a/index.html
+++ b/index.html
@@ -634,12 +634,9 @@
 				<ul class="keywords">
 					<li>ReactJS</li>
 					<li>React Native</li>
-					<li>Redux/Thunk/Saga</li>
-					<li>Babel/Flow</li>
-					<li>HTML/CSS/Javascript</li>
-					<li>NPM/Bower</li>
-					<li>Webpack/Gulp</li>
-					<li>Lodash/Underscore</li>
+					<li>Redux + Thunk/Saga</li>
+					<li>Babel + Flow + Webpack</li>
+					<li>HTML/CSS/JavaScript</li>
 				</ul>
 				<div class="level">
 					<p><em>Low+</em></p>
@@ -712,7 +709,7 @@
 					<p><em>Exp with this</em></p>
 				</div>
 				<ul class="keywords">
-					<li>Docker</li>
+					<li>Docker + docker-compose</li>
 					<li>Vagrant</li>
 					<li>Valgrind/Callgrind</li>
 					<li>GDB</li>
