--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Dmitry Patsura</title>
 
-	<link href="//bootswatch.com/lumen/bootstrap.min.css" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Roboto:500,300" rel="stylesheet" type="text/css">
 	<link href="/style.css" rel="stylesheet" type="text/css">
 </head>
