--- a/index.html
+++ b/index.html
@@ -538,6 +538,25 @@
 		</div>
 		<div class="col-sm-8">
 			<div class="item">
+				<div class="item">
+					<div class="name">
+						<h3>PiterJS#19 - N подводных камней и горсть советов при разработке на React Native</h3>
+					</div>
+					<div class="publisher">
+						<p class="lead">PiterJS#19</p>
+					</div>
+					<div class="date">
+						2017-12-02
+					</div>
+					<div class="website">
+						<iframe width="100%" height="455" src="https://www.youtube.com/watch?v=qehnKIu30mY" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="summary">
+						<p>
+							Используя React Native как основную технологию для разработки мобильных приложений, накопилось множество разнообразных интересных моментов и опыта, которым докладчик хотел бы поделиться. В докладе Дмитрий расскажет об особенностях инструмента и сложностях разработки на нем мобильных приложений. Доклад будет интерес как людям уже использующим RN, так и тем, кто только слышал и присматривается к данной технологии.
+						</p>
+					</div>
+				</div>
 				<div class="name">
 					<h3>React Native - Learn once, write anywhere</h3>
 				</div>
