--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 			<div class="item">
 				<div class="item">
 					<div class="name">
-						<h3>PiterJS#19 - N подводных камней и горсть советов при разработке на React Native</h3>
+						<h3>N подводных камней и горсть советов при разработке на React Native</h3>
 					</div>
 					<div class="publisher">
 						<p class="lead">PiterJS#19</p>
@@ -557,6 +557,33 @@
 						</p>
 					</div>
 				</div>
+			</div>
+			<div class="item">
+				<div class="item">
+					<div class="name">
+						<h3>WebRTC-шная тема</h3>
+					</div>
+					<div class="publisher">
+						<p class="lead">MoscowJS#39</p>
+					</div>
+					<div class="date">
+						2017-11-23
+					</div>
+					<div class="website">
+						<iframe width="100%" height="455" src="https://www.youtube.com/watch?v=nqigzFbAYM0" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="summary">
+						<ul>
+							<li>Overview WebRTC draft</li>
+							<li>WEB MEDIA API</li>
+							<li>Что такое NAT? И зачем нам STURN & TURN сервера?</li>
+							<li>WebRTC & Signaling</li>
+							<li>Разберем реализацию и подовные камни</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="item">
 				<div class="name">
 					<h3>React Native - Learn once, write anywhere</h3>
 				</div>
