--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 						2017-12-02
 					</div>
 					<div class="website">
-						<iframe width="100%" height="455" src="https://www.youtube.com/watch?v=qehnKIu30mY" frameborder="0" allowfullscreen></iframe>
+						<iframe width="100%" height="455" src="https://www.youtube.com/embed/qehnKIu30mY" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="summary">
 						<p>
@@ -570,7 +570,7 @@
 						2017-11-23
 					</div>
 					<div class="website">
-						<iframe width="100%" height="455" src="https://www.youtube.com/watch?v=nqigzFbAYM0" frameborder="0" allowfullscreen></iframe>
+						<iframe width="100%" height="455" src="https://www.youtube.com/embed/nqigzFbAYM0" frameborder="0" allowfullscreen></iframe>
 					</div>
 					<div class="summary">
 						<ul>
