--- a/index.html
+++ b/index.html
@@ -540,6 +540,48 @@
 			<div class="item">
 				<div class="item">
 					<div class="name">
+						<h3>Микросервисная архитектура</h3>
+					</div>
+					<div class="publisher">
+						<p class="lead">HolyJS Moscow 2018</p>
+					</div>
+					<div class="date">
+						2018-11-25
+					</div>
+					<div class="website">
+						<iframe width="100%" height="455" src="https://www.youtube.com/embed/wXaoKroEnp4" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="summary">
+						<p>
+							Хайп прошел, а это значит, самое время погружаться в микросервисную архитектуру. Начнем с разговора об основных принципах технологии, рассматривая ее базовые принципы в свете ее преимуществ и недостатков. Поговорим, как должна выглядеть архитектура сервисов, какие проблемы бывают и как их решать.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="item">
+					<div class="name">
+						<h3>Архитектура React Native для JS-разработчика</h3>
+					</div>
+					<div class="publisher">
+						<p class="lead">HolyJS Piter 2018</p>
+					</div>
+					<div class="date">
+						2018-05-20
+					</div>
+					<div class="website">
+						<iframe width="100%" height="455" src="https://www.youtube.com/embed/v4MnR41SHZc" frameborder="0" allowfullscreen></iframe>
+					</div>
+					<div class="summary">
+						<p>
+							Это технологический доклад, раскрывающий архитектуру React Native. Доклад будет полезен разработчикам любого уровня, как уже использующим React Native, так и присматривающимся к данной технологии. Поможет влиться, обрести понимание технологии и не бояться разработчикам, которые только смотрят на RN как на перспективную технологию для будущих или нынешних проектов.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="item">
+				<div class="item">
+					<div class="name">
 						<h3>N подводных камней и горсть советов при разработке на React Native</h3>
 					</div>
 					<div class="publisher">
