--- a/index.html
+++ b/index.html
@@ -635,6 +635,9 @@
 				<div class="date">
 					2017-06-17
 				</div>
+				<div class="website">
+					<iframe width="100%" height="455" src="https://www.youtube.com/embed/PlbeVIMf6XU" frameborder="0" allowfullscreen></iframe>
+				</div>
 				<div class="summary">
 					<p>
 						От обзора архитектуры react-native, до построения приложения на нем. В процессе доклада мы разберем разработку приложения на нем и решении трудностей, а также сделаем выводы о плюсах и минусах данной технологии.
@@ -661,6 +664,9 @@
 				</div>
 				<div class="date">
 					2017-06-17
+				</div>
+				<div class="website">
+					<iframe width="100%" height="455" src="https://www.youtube.com/watch?v=RxzJj5HbzIE" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="summary">
 					<p>
