--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 					2017-06-17
 				</div>
 				<div class="website">
-					<iframe width="100%" height="455" src="https://www.youtube.com/watch?v=RxzJj5HbzIE" frameborder="0" allowfullscreen></iframe>
+					<iframe width="100%" height="455" src="https://www.youtube.com/embed/RxzJj5HbzIE" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="summary">
 					<p>
