--- a/index.html
+++ b/index.html
@@ -139,19 +139,56 @@
 		<div class="col-sm-8">
 			<div class="item">
 				<h3 class="name">
-					Unknown Company
+					Fintier
 				</h3>
 				<div class="position">
-					<p class="lead">Backend developer</p>
+					<p class="lead">FullStack developer</p>
+				</div>
+				<div class="date">
+					<span class="startDate">
+						2018 (February)
+					</span>
+					<span class="endDate">
+						present
+					</span>
+				</div>
+				<div class="website">
+					<a href="https://fintier.com/">https://fintier.com/</a>
+				</div>
+				<div class="summary">
+					<p>Helping institutions and organisations to develop a marketplace, provide innovative financial services and accept payments worldwide.</p>
+				</div>
+			</div>
+			<div class="item">
+				<h3 class="name">
+					InterPals
+				</h3>
+				<div class="position">
+					<p class="lead">FullStack lead developer</p>
 				</div>
 				<div class="date">
 					<span class="startDate">
 						2016 (May)
 					</span>
 					<span class="endDate">
-						present
+						2018 (February)
 					</span>
 				</div>
+				<div class="website">
+					<a href="https://www.interpals.net/">https://www.interpals.net/</a>
+				</div>
+				<div class="summary">
+					<p>InterPals is the top site to make new friends, practice languages with native speakers and meet travelers!</p>
+					<p>What I did on the project:</p>
+				</div>
+				<ul class="highlights">
+					<li>REST API - development on PHP/MySQL/Redis/Memcached</li>
+					<li>Mobile Development on React Native</li>
+					<li>SPA on React/Redux with Web-RTC video/audio calls</li>
+					<li>WS server on Go lang, https://github.com/interpals/websocketerd</li>
+					<li>Microservices for upload handling on Go lang, https://github.com/interpals/uploaderd</li>
+					<li>Hight performance re-indexer from MySQL to ElasticSearch, https://github.com/interpals/es-reindexer</li>
+				</ul>
 			</div>
 			<div class="item">
 				<h3 class="name">
