--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						2018 (February)
 					</span>
 					<span class="endDate">
-						present
+						- Present
 					</span>
 				</div>
 				<div class="website">
@@ -171,7 +171,7 @@
 						2016 (May)
 					</span>
 					<span class="endDate">
-						2018 (February)
+						- 2018 (February)
 					</span>
 				</div>
 				<div class="website">
@@ -230,10 +230,10 @@
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2014 - 2015 (September)
+						2014
 					</span>
 					<span class="endDate">
-						- Present
+						2015 (September)
 					</span>
 				</div>
 				<div class="summary">
